# soundcloud-cli

./: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/api/: auth.ts  soundcloud.ts
src/components/: AuraField.tsx  ErrorBoundary.tsx  Player.tsx  PlaylistCard.tsx  Sidebar.tsx  StarField.tsx  ThemeProvider.tsx  Titlebar.tsx  TrackCard.tsx
src/components/album/: AlbumCast.tsx  AlbumCoverArtifact.tsx  AlbumHero.tsx  AlbumPlayButton.tsx  AlbumTrackList.tsx  AlbumTrackRow.tsx  types.ts  useAlbumData.ts
src/components/artist/: types.ts  useArtistData.ts
src/components/discover/: AlbumGridCard.tsx  AlbumsCatalog.tsx  ArtistGridCard.tsx  ArtistsCatalog.tsx  DiscoverHero.tsx  DiscoverSpotlight.tsx  FilterRow.tsx  InfiniteSentinel.tsx  PrismBand.tsx  useDebouncedValue.ts  visuals.ts
src/components/ui/: Avatar.tsx  ErrorScreen.tsx  GlassHeroPanel.tsx  HorizontalScroll.tsx  Skeleton.tsx  VirtualGrid.tsx
src/components/user/: TabDock.tsx  UserChips.tsx  (+1 more)
src/lib/: api-client.ts  aura.ts  constants.ts  discover.ts  formatters.ts  genre-aura.ts  perf.ts  use-oauth-flow.ts  useTrackPlay.ts  useViewerAura.ts
src/pages/: AlbumPage.tsx  ArtistPage.tsx  Discover.tsx  Feed.tsx  Home.tsx  Library.tsx  Login.tsx  Offline.tsx  PlaylistPage.tsx  Search.tsx  Settings.tsx  TrackPage.tsx  UserPage.tsx
src/store/: authStore.ts  historyStore.ts  likesStore.ts  playerStore.ts  settingsStore.ts
